# android-native-app

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/aitl/pddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/inc/: Platform_cam_mgr_client.h  new_cam.h  pedapp.hpp  sys.h  sysmemc.h  sysmempool.h  sysmempoolallocator.h  systypes.h
app/src/main/cpp/source/: main.cpp  main.hpp
app/src/main/java/com/aitl/pddemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/aitl/pddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCV/: build.gradle
